[gd_scene load_steps=3 format=2]

[ext_resource path="res://Weapons/Knife.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="icon" type="Sprite" parent="Sprite"]
position = Vector2( -0.00778866, -0.0207686 )
scale = Vector2( 0.129541, 0.129541 )
texture = ExtResource( 2 )

[node name="AttackCooldown" type="Timer" parent="."]
one_shot = true

[node name="ReloadCooldown" type="Timer" parent="."]
one_shot = true

[node name="ShootSound" type="AudioStreamPlayer" parent="."]

[node name="ReloadSound" type="AudioStreamPlayer" parent="."]

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( 12.4473, -0.0589924 )
